# arduino-scope

./: CMakeLists.txt  Doxyfile  README  TFuzzy.c  TFuzzy.h  arduinoproducer.cpp  arduinoproducer.h  data.cpp  display.cpp  display.h  fileseriesproducer.cpp  fileseriesproducer.h  line.cpp  line.h  main.cpp  randomseriesproducer.cpp  randomseriesproducer.h  scope.kdev4  seriesproducer.cpp  seriesproducer.h  sound.cpp  sound.h
ArduinoCode/oscilloscope/: oscilloscope.pde
